<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/transparent_bg_bordered_bacgraond_activity">


    <TextView
        android:id="@+id/HotelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/iransans"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/TxtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ic_location_web"
        android:textColor="@color/greean_web"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/imageView4004"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2">


        <TextView
            android:id="@+id/Txtstar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_star_web"
            android:textColor="@color/greean_web"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Txtstar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_star_web"
            android:textColor="@color/greean_web"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Txtstar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/ic_star_web"
            android:textColor="@color/greean_web"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Txtstar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_star_web"
            android:textColor="@color/greean_web"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Txtstar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_star_web"
            android:textColor="@color/greean_web"
            android:textSize="20sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/TxtCall2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ic_tel_web"
        android:textColor="@color/greean_web"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/TxtLocation"
        app:layout_constraintTop_toBottomOf="@+id/TxtLocation" />


    <TextView
        android:id="@+id/accelerate00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/ic_monator_web"
        android:textAlignment="center"
        android:textColor="@color/greean_web"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/TxtCall2"
        app:layout_constraintTop_toBottomOf="@+id/TxtCall2" />


    <androidx.cardview.widget.CardView
        android:id="@+id/imageVsiew666"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:elevation="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_bookmark_xd" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewShareButtom"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:elevation="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/imageVsiew666"
        app:layout_constraintStart_toStartOf="@+id/imageVsiew666"
        app:layout_constraintTop_toBottomOf="@+id/imageVsiew666"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_share_xd" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:elevation="12dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewShareButtom"
        app:layout_constraintStart_toStartOf="@+id/cardViewShareButtom"
        app:layout_constraintTop_toBottomOf="@+id/cardViewShareButtom"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_heart_xd" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/iransans"
        android:text="@string/emtiyaz_karbaran"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/HotelTitle"
        app:layout_constraintTop_toBottomOf="@+id/HotelTitle" />

    <TextView
        android:id="@+id/Site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/iransans"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/accelerate00"
        app:layout_constraintEnd_toStartOf="@+id/accelerate00"
        app:layout_constraintTop_toTopOf="@+id/accelerate00" />


    <TextView
        android:id="@+id/txtPhonNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/iransans"
        android:text=" 03132226010"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/TxtCall2"
        app:layout_constraintEnd_toStartOf="@+id/TxtCall2"
        app:layout_constraintTop_toTopOf="@+id/TxtCall2" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/iransans"
        android:text="@string/adres"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/TxtLocation"
        app:layout_constraintEnd_toStartOf="@+id/TxtLocation"
        app:layout_constraintTop_toTopOf="@+id/TxtLocation" />


</androidx.constraintlayout.widget.ConstraintLayout>